[gd_scene load_steps=7 format=3 uid="uid://cnbfxjy1m6wja"]

[ext_resource type="Script" path="res://src/OptionMenu/OptionsMenu.gd" id="1_tlein"]
[ext_resource type="PackedScene" uid="uid://b7oncobnacxmt" path="res://src/LocaleButton.tscn" id="2_d7wvq"]
[ext_resource type="PackedScene" uid="uid://bq3awxxjn1tuw" path="res://src/OptionMenu/VideoTab.tscn" id="2_ji8xr"]
[ext_resource type="PackedScene" uid="uid://cbtgwpx2wxi33" path="res://src/OptionMenu/SoundTab.tscn" id="3_4w35t"]
[ext_resource type="PackedScene" uid="uid://bq7ibhm0txl5p" path="res://addons/keychain/ShortcutEdit.tscn" id="4_vdhjp"]
[ext_resource type="PackedScene" uid="uid://dp2grvybtecqu" path="res://src/OptionMenu/OtherTab.tscn" id="5_ahefp"]

[node name="OptionsMenu" type="Control"]
editor_description = "UI-25"
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tlein")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 200

[node name="Tab" type="TabContainer" parent="Margin"]
editor_description = "UI-45"
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
use_hidden_tabs_for_min_size = true

[node name="Video" parent="Margin/Tab" instance=ExtResource("2_ji8xr")]
editor_description = "UI-46, UIFUN-43"
layout_mode = 2

[node name="Sound" parent="Margin/Tab" instance=ExtResource("3_4w35t")]
editor_description = "UI-47, UIFUN-44"
visible = false
layout_mode = 2

[node name="Controls" parent="Margin/Tab" instance=ExtResource("4_vdhjp")]
editor_description = "SS-27, UI-49, UIFUN-46"
visible = false
layout_mode = 2

[node name="Other" parent="Margin/Tab" instance=ExtResource("5_ahefp")]
layout_mode = 2

[node name="LocaleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="LocaleHBox" type="HBoxContainer" parent="LocaleVBox"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="LocaleButton" parent="LocaleVBox/LocaleHBox" instance=ExtResource("2_d7wvq")]
editor_description = "UI-79"
layout_mode = 2
